# ble_utils

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build_test.yml
include/ble_utils/: ble_utils.hpp  uuid.hpp
samples/boards/: native_posix_64.conf
samples/uptime/: CMakeLists.txt  README.md  prj.conf
samples/uptime/src/: ble.cpp  ble.hpp  main.cpp  uptime_service.cpp  uptime_service.hpp
src/: ble_utils.cpp
tests/bumble/: cmds.txt  controller.py  controllers.py  scan.py
tests/renode/: tests.yaml  uptime.resc  uptime_test.robot
tests/renode/ble_central/: CMakeLists.txt  prj.conf
tests/renode/ble_central/src/: discovery.cpp  discovery.hpp  main.cpp
zephyr/: KConfig  module.yml
